everything. game over screens, laser animation, how to play, counters timers, first time force tutorial

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-toast')
+    compile project(':react-native-sound')
+    compile project(':react-native-share')
     compile project(':react-native-video')
     compile project(':react-native-fbsdk')
     compile project(':react-native-mail')
