--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-native-motion-manager": "0.0.6",
     "react-native-navbar": "^1.5.0",
     "react-native-router-flux": "3.30.0",
+    "react-native-share": "^1.0.13",
     "react-native-simple-radio-button": "^2.0.2",
     "react-native-sound": "^0.8.3",
+    "react-native-toast": "github:otech47/react-native-toast",
     "react-native-vector-icons": "^1.3.4",
     "react-native-video": "^0.9.0",
     "react-redux": "^4.4.5",
