--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-share": "^1.0.13",
     "react-native-simple-radio-button": "^2.0.2",
     "react-native-sound": "^0.8.3",
+    "react-native-timer": "^1.1.2",
     "react-native-toast": "github:otech47/react-native-toast",
     "react-native-vector-icons": "^1.3.4",
     "react-native-video": "^0.9.0",
